--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -143,3 +143,6 @@
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: १७.४१
+* कायमस्वरूपी पडीक जमीन: ७.६
+* सद्यस्थितींत पडीक जमीन: २.३
+* पिकां सकयली जमीन: २७९.६७
