--- a/शेळवण.mw
+++ b/शेळवण.mw
@@ -38,3 +38,5 @@
 गांवांत २ शासकीय प्राथमिक शाळा आसा.
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (CURCHOREM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (CURCHOREM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (CURCHOREM-CACORA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
