--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -159,3 +159,6 @@
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: २३.१७
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ६८.६५
