--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -11,3 +11,5 @@
 एकूण साक्षर लोकसंख्या: ५२६०
 साक्षर पुरुश लोकसंख्या: २७३७ (८६.२%)
 साक्षर स्त्री लोकसंख्या: २५२३ (८१.२६%)
+
+नितळसाण आनी पिवपाचें उदक
