--- a/सां_जुजे_द_आर्लें.mw
+++ b/सां_जुजे_द_आर्लें.mw
@@ -71,3 +71,10 @@
 
 
 == संदर्भ ==
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:दक्षिण गोंय]]
+[[Category:सालसेत तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
