--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -156,3 +156,4 @@
 * ओढे: ०
 * हेर: ३.८४
 == उत्पादन ==
+कुमारखण ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CASHEW LIQUOR,PAINTING,RAGI,CASHEW NUTS,SUGARCANE
