--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -13,4 +13,4 @@
 साक्षर स्त्री लोकसंख्या: २५२३ (८१.२६%)
 
 नितळसाण आनी पिवपाचें उदक
-शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.
+शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.उदका पुरवणेची तांक 5000 किलो लिटर आसा.
