--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -165,3 +165,9 @@
 * एकूण कोरड व्हांवपी जमीन: ६६.६९
 * एकूण बागायत जमीन: १.९६
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: १.९६
