--- a/सां_जुजे_द_आर्लें.mw
+++ b/सां_जुजे_द_आर्लें.mw
@@ -76,5 +76,5 @@
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:दक्षिण गोंय]]
-[[Category:सालसेत तालुका]]
+[[Category:साश्टी तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
