--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -172,3 +172,9 @@
 * ओढे: ०
 * हेर: १.९६
 == उत्पादन ==
+तांबशें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CASHEW NUTS
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[पेडणें]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
