--- a/कुमारखण.mw
+++ b/कुमारखण.mw
@@ -163,3 +163,27 @@
 
 
 == संदर्भ ==
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:गोंयचीं शारां आनी जागे]]
