--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -16,4 +16,4 @@
 शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.उदका पुरवणेची तांक 5000 किलो लिटर आसा.सगळ्यांत लागीं आग पालोवपाची सुविधा MAPUSA(५ किमी)हांगां आसा.
 
 वैजकी सुविधा (शासकीय)
-सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ७ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ४० किमी हांगां आसा. ﻿शारांत १ दवाखानो आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ७ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ४० किमी हांगां आसा. ﻿शारांत १ दवाखानो आसा.शारांत १ कुटूंब कल्याण केंद्र आसा. ﻿शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा. सगळ्यांत लागीं प्रसूती केंद्र ७ किमी हांगां आसा. सगळ्यांत लागीं
