--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -175,7 +175,11 @@
 तांबशें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CASHEW NUTS
 
 
-[[वर्ग:[[उत्तर गोवा]]]]
-[[वर्ग:[[पेडणें]]]]
-[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
 == संदर्भ ==
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:पेडणें तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
