--- a/तांबशें.mw
+++ b/तांबशें.mw
@@ -181,5 +181,5 @@
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
-[[Category:पेडणें तालुका]]
+[[Category:पेडणे तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
