--- a/शेळवण.mw
+++ b/शेळवण.mw
@@ -116,3 +116,5 @@
 सगळ्यांत लागीं कच्चो रस्तो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
+== बाजार आनी सावकारी पेडी ==
+गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा.
