--- a/कडवळ.mw
+++ b/कडवळ.mw
@@ -24,3 +24,4 @@
 }}
 
 == कडवळ (६२६८१८) ==
+कडवळ हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ८८७.२५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १ कुटुंबाचे व पुराय ५ लोकसंख्या आसा. हांगा लागीचे शार VALPOI १८ किलोमीटर अंतरावर आसा. हांगा ३ दादले आनीक २ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८१८  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
