--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -20,3 +20,4 @@
 
 शैक्षणिक सुविधा
 शारांत १ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (७ किमी) हांगां आसा.
