--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -156,3 +156,5 @@
 * ओसाड आनी लागवड ना केल्ली जमीन: १.३९
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: १.१
+* लागवडयोग्य पडीक जमीन: १.७५
+* कायमस्वरूपी पडीक जमीन: ४.८८
