--- a/शेळवण.mw
+++ b/शेळवण.mw
@@ -156,3 +156,5 @@
 == जमिनीचो वापर ==
 शेळवण ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ०
+* शेतकामा खातीर ना वापरिल्ली जमीन: ६७
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
