--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -22,3 +22,17 @@
 शारांत १ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१२ किमी) हांगां आसा.
+
+
+
+
+
+== '''संदर्भ''' ==
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
