--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -33,4 +33,4 @@
 गांवांत एटीएम उपलब्ध ना.सगळ्यांत लागीं एटीएम ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत वेपाराविशी सावकारी पेडी उपलब्ध आसा. गांवांत सहकारी सावकारी पेडी उपलब्ध ना.सगळ्यांत लागीं सहकारी सावकारी पेडी ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत शेतकी कर्ज संस्था उपलब्ध ना.सगळ्यांत लागीं शेतकी कर्ज संस्था ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत स्वयंसहाय्य गट उपलब्ध ना.सगळ्यांत लागीं स्वयंसहाय्य गट ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत रेशन मांड उपलब्ध आसा. गांवांत मंडी / कायमचे बाजार उपलब्ध आसा. गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार ५ किलोमिटरा परस कमी अंतराचेर आसा. गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा.
 
 == '''आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा''' ==
-गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा. गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा. गांवांत 'आशा'
+गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा. गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा. गांवांत 'आशा' कर्मचारी उपलब्ध आसा. गांवांत समाज भवन (टीव्ही वेवस्था आशिल्ली/नाशिल्ली) उपलब्ध ना.सगळ्यांत लागीं समाज भवन (टीव्ही वेवस्था
