--- a/आंबेडें.mw
+++ b/आंबेडें.mw
@@ -170,3 +170,6 @@
 * तळी: ०
 * ओढे: ०
 * हेर: २.४५
+
+== उत्पादन ==
+आंबेडें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,ARECANUTS,COCONUTS
