--- a/शेळवण.mw
+++ b/शेळवण.mw
@@ -178,3 +178,15 @@
 
 
 == उत्पादन ==
+शेळवण ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,COCONUTS
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:दक्षिण गोंय]]
+[[Category:साश्टी तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
+
+
+
+== संदर्भ ==
