--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -25,7 +25,7 @@
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (१८ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर MAPUSA (७ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM C T (१६ किमी) हांगां आसा.
-
+सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C T (४० किमी) हांगां आसा.
 
 == '''संदर्भ''' ==
 
