--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -12,7 +12,7 @@
  गांवांत २ शासकीय प्राथमीक शाळा आसा. 
 ﻿ गांवांत १ शासकीय कनिश्ठ माध्यमीक शाळा आसा. 
 ﻿ गांवांत १ शासकीय माध्यमीक शाळा आसा. 
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमीक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
