--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -27,6 +27,15 @@
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM C T (१६ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C T (४० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (१० किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (११ किमी) हांगां आसा.
+
+
+
+
+
+
+
+
 == '''संदर्भ''' ==
 
 
