--- a/भुंयपाल.mw
+++ b/भुंयपाल.mw
@@ -16,7 +16,7 @@
  सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवस्थापन संस्था (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
  सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) ५ किलोमिटरा परस कमी अंतराचेर आसा.
  सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
