--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -14,3 +14,7 @@
 * एकूण साक्षर लोकसंख्या: ४८९१
 * साक्षर पुरुश लोकसंख्या: २५९१ (८५.६८%)
 * साक्षर स्त्री लोकसंख्या: २३०० (८२.०५%)
+
+== नितळसाण आनी पिवपाचें उदक ==  
+शारांत उकती आनी बंद गटारवेवस्था आसा.
+उंचायेर आशिल्ले टाकयेंतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 3150 किलो लिटर आसा.
