--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -18,3 +18,5 @@
 == नितळसाण आनी पिवपाचें उदक ==  
 शारांत उकती आनी बंद गटारवेवस्था आसा.
 उंचायेर आशिल्ले टाकयेंतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 3150 किलो लिटर आसा.
+
+सगळ्यांत लागीं आग पालोवपाची सुविधा PANAJI (५ किमी) हांगां आसा.
