--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -20,3 +20,7 @@
 उंचायेर आशिल्ले टाकयेंतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 3150 किलो लिटर आसा.
 
 सगळ्यांत लागीं आग पालोवपाची सुविधा PANAJI (५ किमी) हांगां आसा.
+
+== वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ४ किमी हांगां आसा.
+सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ५० किमी हांगां आसा.
