--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -24,3 +24,5 @@
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ४ किमी हांगां आसा.
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ५० किमी हांगां आसा.
+सगळ्यांत लागीं दवाखानो ७ किमी हांगां आसा.
+सगळ्यांत लागीं कुटूंब कल्याण केंद्र ७ किमी हांगां आसा.
