--- a/कडवळ.mw
+++ b/कडवळ.mw
@@ -117,3 +117,18 @@
 
 
 == '''संदर्भ''' ==
+
+
+
+
+
+
+
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:सत्तरी तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
