--- a/साळगांव.mw
+++ b/साळगांव.mw
@@ -28,7 +28,7 @@
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C T (४० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (११ किमी) हांगां आसा.
-
+सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (७ किमी) हांगां आसा.
 
 
 
