--- a/शिरदोण.mw
+++ b/शिरदोण.mw
@@ -49,3 +49,11 @@
 
 
 == '''संदर्भ''' ==
+
+
+
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:तिसवाडी तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
