--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -26,3 +26,6 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ५० किमी हांगां आसा.
 सगळ्यांत लागीं दवाखानो ७ किमी हांगां आसा.
 सगळ्यांत लागीं कुटूंब कल्याण केंद्र ७ किमी हांगां आसा.
+सगळ्यांत लागीं प्रसूती आनी बालकल्याण केंद्र ७ किमी हांगां आसा.
+सगळ्यांत लागीं प्रसूती केंद्र ७ किमी हांगां आसा.
+सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १५ किमी हांगां आसा.
