--- a/असोडें.mw
+++ b/असोडें.mw
@@ -24,3 +24,7 @@
 }}
 
 == असोडें  ==
+असोडें हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ४९७.०५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात २४ कुटुंबाचे व पुराय १२० लोकसंख्या आसा. हांगा लागीचे शार VALPOI १२ किलोमीटर अंतरावर आसा. हांगा ६४ दादले आनीक ५६ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८३६  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+
+== साक्षरताय ==
