--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -29,3 +29,5 @@
 सगळ्यांत लागीं प्रसूती आनी बालकल्याण केंद्र ७ किमी हांगां आसा.
 सगळ्यांत लागीं प्रसूती केंद्र ७ किमी हांगां आसा.
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १५ किमी हांगां आसा.
+सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय  १० किमी हांगां आसा.
