--- a/कडवळ.mw
+++ b/कडवळ.mw
@@ -108,13 +108,11 @@
 राज्य महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राज्य महामार्ग १० किलोमिटर परस चड अंतराचेर आसा.
 जिल्ल्यातलो मुखेल रस्तो गांवाक जोडला.
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो १० किलोमिटर परस चड अंतराचेर आसा.
-
-
-
-
-
-
-
+गांवांत स्वयंसहाय्य गट उपलब्ध ना.सगळ्यांत लागीं स्वयंसहाय्य गट ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत रेशन मांड उपलब्ध ना.सगळ्यांत लागीं रेशन मांड ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत मंडी / कायमचे बाजार उपलब्ध ना.सगळ्यांत लागीं मंडी / कायमचे बाजार १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा
 
 == '''संदर्भ''' ==
 
