--- a/पिळर्ण.mw
+++ b/पिळर्ण.mw
@@ -31,3 +31,5 @@
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १५ किमी हांगां आसा.
 सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय  १० किमी हांगां आसा.
+सगळ्यांत लागीं फिरतो दवाखानो ० किमी हांगां आसा.
+सगळ्यांत लागीं हेर वैजकीय सुविधा ४ किमी हांगां आसा.
