--- a/अकबर.mw
+++ b/अकबर.mw
@@ -15,9 +15,9 @@
 
 1562 – 1570 ह्या काळांत तो कांय राजपूत राजकुंवरीं कडेन लग्न जालो. ताणें कांय रजपुतांक म्हत्वाच्या मनसब खात्यांत आनी तहसील खात्यांत मुखेली म्हण नेमलें. हिंदू रजपूत अकबराचे निश्ठावान सेवक जाल्ले. हिंदूस्थानाक आपलो देश मानपी हो पयलोच मुसलमान बादशाह. सगळे धर्म एकठांय करून एक व्यापक धर्म निर्माण करपाची ताची इत्सा आशिल्ली. ताका अनुसरून 1581 वर्सा ताणें ‘दीन-ए-इलाही’ हो सगळ्या धर्मांतल्या वेंचीक तत्वांचेर आदारीत असो नवो धर्म पंथ निर्माण केलो. ‘दीन-ए- इलाही’ हाचो अर्थ ‘देवाचो धर्म’. ताका ‘तौहीदे इलाही’ (एकेश्र्वरी धर्म) अशेंय म्हणटात.
 
-नवरोजा सारके कांय पारशी सण तो मनयतालो. तो सुर्याचीय उपासना करतालो. जैन धर्माचो ताचेर प्रभाव पडिल्लो. पूण हिंदूच्या दिवाळे सारक्या परबेंत तो खोशयेन वांटो घेतालो. ताणें आपल्या राजवटींत साहित्य, संगीत आनी कला हांची खूब उदरगत केली. तानसेन, बाबा रामदास, बैजू बावरा हे नामनेचे गवय आनी फैझी, अबुल फजल, बदायुनी, बिरबल, तोडरमल, मानसिंग सारकील्या नामनेच्या पंडितांक ताणें आपल्या दरबारांत आलाशिरो दिलो. ताणें फारसी आनी संस्कृत साहित्य- निर्मणेच्या वावराक खूब उर्बा दिल्ली. अथर्ववेद, भगवद्गीता, रामायण, महाभारत, हरिवंश, लीलावती, पंचतंत्र ह्या संस्कृत ग्रंथांचे ताणें विद्वाना कडल्यान फारसी भाशेंत अणकार करून घेतले. निजीमुद्दीन, बदायुनी ह्या इतिहासकारांनी पार्सी भाशेंत इतिहास बरयले. अकबराचे जिणेचेर बरयल्लो अबुल फज्ल हाचो ‘अकबरनामा’ हो ग्रंथ खूब नांवाजल्लो आसा. तुलसीदास, सुरदास, रहीम, रसखान, बिरबल आनी भक्तीपंथाचो म्हान फुडारी विठ्ठलनाथ हे म्हान कवी ताच्या काळांत जावन गेले.
+नवरोजा सारके कांय पारशी सण तो मनयतालो. तो सुर्याचीय उपासना करतालो. जैन धर्माचो ताचेर प्रभाव पडिल्लो. पूण हिंदूच्या 'दिवाळे' सारक्या परबेंत तो खोशयेन वांटो घेतालो. ताणें आपल्या राजवटींत साहित्य, संगीत आनी कला हांची खूब उदरगत केली. तानसेन, बाबा रामदास, बैजू बावरा हे नामनेचे गवय आनी फैझी, अबुल फजल, बदायुनी, बिरबल, तोडरमल, मानसिंग सारकील्या नामनेच्या पंडितांक ताणें आपल्या दरबारांत आलाशिरो दिलो. ताणें फारसी आनी संस्कृत साहित्य- निर्मणेच्या वावराक खूब उर्बा दिल्ली. अथर्ववेद, भगवद्गीता, रामायण, महाभारत, हरिवंश, लीलावती, पंचतंत्र ह्या संस्कृत ग्रंथांचे ताणें विद्वाना कडल्यान फारसी भाशेंत अणकार करून घेतले. निजीमुद्दीन, बदायुनी ह्या इतिहासकारांनी पार्सी भाशेंत इतिहास बरयले. अकबराचे जिणेचेर बरयल्लो अबुल फज्ल हाचो ‘अकबरनामा’ हो ग्रंथ खूब नांवाजिल्लो आसा. तुलसीदास, सुरदास, रहीम, रसखान, बिरबल आनी भक्तीपंथाचो म्हान फुडारी विठ्ठलनाथ हे म्हान कवी ताच्या काळांत जावन गेले.
 
-शिक्षणाच्या मळार अकबरान केल्लो वावर मोलाचो. इस्लामी धर्माचो शिक्षणाचेर अशिल्लो प्रभाव ना करपाक ताणें अभ्यासक्रमांत नीतिशास्त्र, गणित, शेती, भुमिती, ज्योतिषशास्त्र, तत्वज्ञान, इतिहास, संस्कृत हे नवें विशय सुरू केले. तशेंच हिंदू- मुसलमानांक एकेच शाळेंत शिकपाची वेवस्था केली. ताणें सुलेखन कलेक उत्तेजन दिलें. त्या काळांत प्रचारांत आशिल्ल्या सुलेखनकलेच्या आठ प्रकारांतलो ‘नस्तअलीक’ हो प्रकार ताचो आवडीचो आशिल्लो. चित्रकला, शिल्पकला, वास्तूकला हांचीय ताचे मुस्तींत खूब उदरगत जाली. 1575 वर्सा ताणें फत्तेपूर सिक्री हांगा ‘इबादत- खाना’ (प्राथना घर) बांदलो. वास्तुकलेक उत्तेजन दिवपा खातीर ताणें एक वेगळेंच खातें उगडिल्लें. ताच्या काळांत बांदिल्ल्या वास्तूंत हिंदू आनी इराणी पद्दतीचो सुंदर मिलाफ दिसता. देखीकः जोधाबाईचो महाल, सती बुरूज, जहांगीर महाल.
+शिक्षणाच्या मळार अकबरान केल्लो वावर मोलाचो. इस्लामी धर्माचो शिक्षणाचेर आशिल्लो प्रभाव ना करपाक ताणें अभ्यासक्रमांत नीतिशास्त्र, गणित, शेती, भुमिती, ज्योतिषशास्त्र, तत्वज्ञान, इतिहास, संस्कृत हे नवें विशय सुरू केले. तशेंच हिंदू- मुसलमानांक एकेच शाळेंत शिकपाची वेवस्था केली. ताणें सुलेखन कलेक उत्तेजन दिलें. त्या काळांत प्रचारांत आशिल्ल्या सुलेखनकलेच्या आठ प्रकारांतलो ‘नस्तअलीक’ हो प्रकार ताच्या आवडीचो आशिल्लो. चित्रकला, शिल्पकला, वास्तूकला हांचीय ताचे मुस्तींत खूब उदरगत जाली. 1575 वर्सा ताणें फत्तेपूर सिक्री हांगा ‘इबादत- खाना’ (प्राथना घर) बांदलो. वास्तुकलेक उत्तेजन दिवपा खातीर ताणें एक वेगळेंच खातें उगडिल्लें. ताच्या काळांत बांदिल्ल्या वास्तूंत हिंदू आनी इराणी पद्दतीचो सुंदर मिलाफ दिसता. देखीकः जोधाबाईचो महाल, सती बुरूज, जहांगीर महाल.
 
 =='''संदर्भ'''==
  <references/>
