--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -1,1 +1,1 @@
-कुर्टी हें उत्तर गोवा जिल्ल्यांतल्या फोंडें तालुक्यांतलें ७.७ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत ३८५९ कुटुंबां वा वट्ट
+कुर्टी हें उत्तर गोवा जिल्ल्यांतल्या फोंडें तालुक्यांतलें ७.७ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत ३८५९ कुटुंबां वा वट्ट १६३८५ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां ३२ किलोमीटर अंतराचेर आसा. राज्याची राजधानी PANAJI हांगां ३२ किलोमीटर
