--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -23,3 +23,5 @@
 |अधिकृत_भास=[[कोंकणी, मराठी]]
 }}
 == शिरोली (६२६७६९) ==
+
+शिरोली हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ३५३.८ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १३६ कुटुंबाचे व पुराय ६६३ लोकसंख्या आसा. हांगा लागीचे शार SANQUELIM ११ किलोमीटर अंतरावर आसा. हांगा ३३७ दादले आनीक ३२६ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६७६९  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
