--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -32,9 +32,8 @@
 == शैक्षणिक सुविधा ==  
 ﻿गांवांत १ शासकीय पूर्व-प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
-सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (PORIEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा. सगळ्यांत लागीं माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (PORIEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
