--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -28,3 +28,5 @@
 
 
 == साक्षरताय ==
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
