--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -30,3 +30,5 @@
 == साक्षरताय ==
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
+﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
+सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
