--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -37,3 +37,8 @@
 सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
