--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -32,3 +32,5 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
 ﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
 सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
