--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -32,13 +32,14 @@
 == शैक्षणिक सुविधा ==  
 ﻿गांवांत १ शासकीय पूर्व-प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
-सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा. सगळ्यांत लागीं माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा. 
+सगळ्यांत लागीं माध्यमिक शाळा (QUERIM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (PORIEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
- सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा. 
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
