--- a/ब्रम्ह-करमळी.mw
+++ b/ब्रम्ह-करमळी.mw
@@ -137,3 +137,15 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 == जमिनीचो वापर ==
+रम्ह-करमळी ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : २६३.८७
+* शेतकामा खातीर ना वापरिल्ली जमीन: १.६५
+* ओसाड आनी लागवड ना केल्ली जमीन: ५.७६
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: २.०६
+* लागवडयोग्य पडीक जमीन: १६.६५
+* कायमस्वरूपी पडीक जमीन: २१.४
+* सद्यस्थितींत पडीक जमीन: १९.१४
+* पिकां सकयली जमीन: १८२.५
+* एकूण कोरड व्हांवपी जमीन: १४६.२५
+* एकूण बागायत जमीन: ३६.२५
