--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -40,3 +40,4 @@
 सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
