--- a/ब्रम्ह-करमळी.mw
+++ b/ब्रम्ह-करमळी.mw
@@ -149,3 +149,10 @@
 * पिकां सकयली जमीन: १८२.५
 * एकूण कोरड व्हांवपी जमीन: १४६.२५
 * एकूण बागायत जमीन: ३६.२५
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: १८.८८
+* बांयो / कूप नलिका: ११.४५
+* तळी: ०
+* ओढे: ०
+* हेर: ५.९२
