--- a/खांडेपार.mw
+++ b/खांडेपार.mw
@@ -157,7 +157,10 @@
 == उत्पादन ==
 खांडेपार ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,COCONUT OIL,COCONUTS
 
+
+
 [[Category:devanagari]]	
 [[Category:गोंय़]]
 [[Category:उत्तर गोंय]]
+[[Category:फोंडें तालुका]]
 [[Category:गोंयचीं शारां आनी जागे]]
