--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -16,4 +16,4 @@
 
 नितळसाण आनी पिवपाचें उदक
 
-शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.
+शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.उदका पुरवणेची तांक 1400 किलो लिटर आसा.
