--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -54,3 +54,8 @@
 सगळ्यांत लागीं दवाखानो ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+== पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण आसा.
+गांवांत धापिल्लें बांयचें उदक पुरवण आसा.
+गांवांत उघड्या बांयचें उदक पुरवण आसा.
