--- a/नागोवा.mw
+++ b/नागोवा.mw
@@ -29,3 +29,8 @@
 * साक्षर पुरुश लोकसंख्या: ६२७ (८५.६६%)
 * साक्षर स्त्री लोकसंख्या: ५८६ (८१.०५%)
 == शैक्षणिक सुविधा ==
+गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
+गांवांत २ शासकीय प्राथमिक शाळा आसा. गांवांत २ खाजगी प्राथमिक शाळा आसा.
+ सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (PARRA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (ARPORA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (MAPUSA) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
