--- a/भेनोर्डे.mw
+++ b/भेनोर्डे.mw
@@ -42,3 +42,19 @@
 == वीज ==
 
 २४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण शेतकामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण शेतकामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण वेपाराविशी कामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण वेपाराविशी कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा. २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+
+जमिनीचो वापर
+
+Bendordem ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+
+    रान : २६.९
+    शेतकामा खातीर ना वापरिल्ली जमीन: २८.४
+    ओसाड आनी लागवड ना केल्ली जमीन: ०
+    कुरणे आनी अन्य मळ: ०
+    विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+    लागवडयोग्य पडीक जमीन: २५४.४
+    कायमस्वरूपी पडीक जमीन: ०
+    सद्यस्थितींत पडीक जमीन: ०
+    पिकां सकयली जमीन: २०९.३
+    एकूण कोरड व्हांवपी जमीन: २०७.३
+    एकूण बागायत जमीन: २
