--- a/अगलोट.mw
+++ b/अगलोट.mw
@@ -1,2 +1,2 @@
 Aglote (६२६९७३)
-Aglote हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील १६४५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या
+Aglote हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील १६४५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ४०२ कुटुंबाचे व
