--- a/भेनोर्डे.mw
+++ b/भेनोर्डे.mw
@@ -67,3 +67,10 @@ Bendordem ह्या गावात जमिनीचो वापर सक
 तळी: ०
 ओढे: १.५
 हेर: ०
+
+उत्पादन
+
+Bendordem ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COCONUTS,COCONUT OIL
+
+वर्ग:दक्षिण गोवा वर्ग:केपें वर्ग:दक्षिण गोवा जिल्ल्यांतले गांव
+संदर्भ
